--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+}
+
 .header{
     background-color: #808080;
     display: flex;
@@ -79,6 +83,7 @@ iframe{
 
 .conatainer{
     display: flex;
+    margin-left: 10px;
 }
 
 .profile-pic{
